--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 server:
   port: 8080
 spring:
+  redis:
+    host: 127.0.0.1
+    port: 6379
+    database: 0
   application:
     #应用名称可选
     name: reggie_take_out
