使用Spring Cache缓存套餐数据

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,9 @@ spring:
     host: 127.0.0.1
     port: 6379
     database: 0
+  cache:
+    redis:
+      time-to-live: 1800000 #设置过期时间
   application:
     #应用名称可选
     name: reggie_take_out
